--- a/templates/components/nav.html
+++ b/templates/components/nav.html
@@ -4,16 +4,13 @@
       <a href="https://eva.covez.net">Inicio</a>
     </li>
     <li>
-      <a href="https://eva.covez.net/about">Sobre mí</a>
+      <a href="{% url 'about' %}">Sobre mí</a>
     </li>
     <li>
-      <a href="https://eva.covez.net/experience">Experiencia</a>
+      <a href="{% url 'blog' %}">Blog</a>
     </li>
     <li>
-      <a href="https://eva.covez.net/blog">Blog</a>
-    </li>
-    <li>
-      <a href="https://eva.covez.net/contact">Contacto</a>
+      <a href="{% url 'contact' %}">Contacto</a>
     </li>
   </ul>
 </nav>
