--- a/templates/base.html
+++ b/templates/base.html
@@ -26,11 +26,11 @@
     <!--TODO: add compatible favicon for all browsers-->
   </head>
   <body class="min-h-screen flex flex-col">
-    {% include 'header.html' %}
+    {% include 'components/header.html' %}
 
     <main class="flex-1">{% block content %}{% endblock %}</main>
 
-    {% include 'footer.html' %}
+    {% include 'components/footer.html' %}
     <script src="{% static 'src/main.js' %}"></script>
   </body>
 </html>
